--- a/client/scss/theme/colors.scss
+++ b/client/scss/theme/colors.scss
@@ -24,3 +24,6 @@ $color_active:     #FF8A65;
 $color_text_primary:     rgba(0, 0, 0, 0.87);
 $color_text_secondary:   rgba(0, 0, 0, 0.54);
 $color_text_disabled:     rgba(0, 0, 0, 0.38);
+$color_text_white_primary:     rgba(255, 255, 255, 0.87);
+$color_text_white_secondary:   rgba(255, 255, 255, 0.54);
+$color_text_white_disabled:     rgba(255, 255, 255, 0.38);
