--- a/client/scss/App.css
+++ b/client/scss/App.css
@@ -50,7 +50,7 @@ html, body, #App-wrapper {
 
 /* line 52, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 .avatar {
-  background: #D0D0F2;
+  background: #ff4081;
   border-radius: 100%; }
 
 /* line 56, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
@@ -59,36 +59,37 @@ html, body, #App-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  cursor: pointer; }
 
-/* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+/* line 64, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 .avatarDefault {
-  background: #8E93AA;
-  color: #FF8A65; }
+  background: #ff4081;
+  color: white; }
 
-/* line 67, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+/* line 68, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 .avatarDisconnected {
-  background: #D0D0F2;
+  background: white;
   color: #FF8A65; }
 
-/* line 72, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+/* line 73, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 input {
   font-size: 10px !important; }
 
 /* APP */
-/* line 85, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+/* line 86, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
 body #App-wrapper .App {
   width: 100%;
   height: 100%;
   flex-direction: column; }
-  /* line 92, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  /* line 93, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
   body #App-wrapper .App #Header {
     position: relative;
     background: #3f51b5; }
-    /* line 98, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 99, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header h1 {
       color: #ffffff; }
-    /* line 102, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 103, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header #networkBadge {
       transition: background-color 0.6s;
       z-index: 1000000;
@@ -100,10 +101,10 @@ body #App-wrapper .App {
       min-width: 0.8em;
       border-radius: 100%;
       pointer-events: none; }
-    /* line 115, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 116, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App #Header a {
       background: none; }
-      /* line 117, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+      /* line 118, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
       body #App-wrapper .App #Header a .avatar {
         margin-top: 0.5em;
         margin-right: 0.5em;
@@ -116,10 +117,10 @@ body #App-wrapper .App {
         min-height: 3em;
         transition: all 0.25s ease-out;
         transform: scale(1); }
-        /* line 132, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+        /* line 133, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
         body #App-wrapper .App #Header a .avatar:active {
           transform: scale(1.1); }
-  /* line 141, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  /* line 142, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
   body #App-wrapper .App .Drawer #drawerTop {
     background-position: center;
     background-size: cover;
@@ -127,10 +128,10 @@ body #App-wrapper .App {
     background-color: #3f51b5;
     padding: 5em 0em 2em 1em;
     color: #ffffff; }
-  /* line 151, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  /* line 152, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
   body #App-wrapper .App .app-main {
     flex: 1; }
-    /* line 154, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+    /* line 155, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
     body #App-wrapper .App .app-main .app-content {
       order: 2; }
 
