--- a/client/scss/account/Account.css
+++ b/client/scss/account/Account.css
@@ -39,24 +39,24 @@
 /* line 61, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
 #Account {
   margin-top: 1em; }
-  /* line 64, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  /* line 63, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
   #Account section {
     display: flex;
     margin: 2em auto;
     justify-content: center;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap; }
-    /* line 86, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 85, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content div.flex, #Account section #AccountNotLogged#AccountLogged .content div.flex {
       margin-bottom: 20px; }
-      /* line 90, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      /* line 89, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
       #Account section #AccountLogged#AccountLogged .content div.flex p:firs-of-type, #Account section #AccountNotLogged#AccountLogged .content div.flex p:firs-of-type {
         margin-top: 10px; }
-      /* line 93, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      /* line 92, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
       #Account section #AccountLogged#AccountLogged .content div.flex p#textUsername, #Account section #AccountNotLogged#AccountLogged .content div.flex p#textUsername {
         font-size: 22px;
         color: #ff4081; }
-      /* line 97, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      /* line 96, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
       #Account section #AccountLogged#AccountLogged .content div.flex p#textEmail, #Account section #AccountNotLogged#AccountLogged .content div.flex p#textEmail {
         font-size: 12px;
         color: rgba(0, 0, 0, 0.54);
@@ -64,86 +64,113 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap; }
-      /* line 105, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      /* line 104, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
       #Account section #AccountLogged#AccountLogged .content div.flex p#textEmailStatut, #Account section #AccountNotLogged#AccountLogged .content div.flex p#textEmailStatut {
         font-size: 10px;
         color: rgba(0, 0, 0, 0.38); }
-      /* line 111, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-      #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar {
-        margin-right: 1em; }
-        /* line 114, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-        #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview {
-          transition: all 0.5s;
-          display: inline-block; }
-          /* line 118, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar img, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar .avatarDefault, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview img, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview .avatarDefault, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar img, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar .avatarDefault, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview img, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview .avatarDefault {
-            width: 60px;
-            height: 60px;
-            max-width: 60px;
-            max-height: 60px;
-            min-width: 60px;
-            min-height: 60px;
-            border-radius: 100%; }
-          /* line 128, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar {
-            position: relative;
-            left: 0;
-            opacity: 1;
-            width: 4.5em; }
-            /* line 136, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-            #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar.is-visible {
-              opacity: 0.7;
-              left: 0px; }
-            /* line 145, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-            #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar #avatarOptions, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar #avatarOptions {
-              position: absolute;
-              top: 0;
-              left: 3.8em;
-              transform: scale(0);
-              transition: all 0.5s;
-              opacity: 0;
-              pointer-events: none; }
-            /* line 164, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-            #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover {
-              width: 6.25em; }
-              /* line 166, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-              #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOptions, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover #avatarOptions {
-                transform: scale(0.8);
-                opacity: 1;
-                pointer-events: auto; }
-          /* line 174, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview {
-            position: absolute;
-            left: 44px;
-            transform: scale(1) translate3d(0, 0, 0);
-            opacity: 0;
-            pointer-events: none; }
-            /* line 182, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-            #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview.is-visible, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview.is-visible {
-              transform: scale(1.2) translate3d(-20px, 15px, 0);
-              opacity: 1;
-              pointer-events: auto; }
-        /* line 191, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-        #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar {
-          width: 0em;
-          height: 0em;
-          transition: all 0.4s;
-          transform-origin: top;
-          transform: scale(0);
-          opacity: 0; }
-          /* line 198, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar.is-visible {
-            transform: scale(1);
-            opacity: 1;
-            height: 4em; }
-          /* line 203, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-          #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar *, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar * {
-            font-size: 10px !important; }
-    /* line 209, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 112, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content #VerifyEmail, #Account section #AccountLogged#AccountLogged .content #ChangePassword, #Account section #AccountLogged#AccountLogged .content #Logout, #Account section #AccountNotLogged#AccountLogged .content #VerifyEmail, #Account section #AccountNotLogged#AccountLogged .content #ChangePassword, #Account section #AccountNotLogged#AccountLogged .content #Logout {
       margin-top: 10px; }
-    /* line 223, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 119, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Account section #AccountLogged#AccountLogged .content #ChangeAvatar, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar {
+      margin-right: 1em; }
+      /* line 122, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar {
+        transition: all 0.5s;
+        display: inline-block; }
+        /* line 126, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar img, #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar .avatarDefault, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar img, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar .avatarDefault {
+          width: 60px;
+          height: 60px;
+          max-width: 60px;
+          max-height: 60px;
+          min-width: 60px;
+          min-height: 60px;
+          border-radius: 100%; }
+        /* line 136, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar {
+          position: relative;
+          left: 0;
+          opacity: 1;
+          width: 4.5em; }
+          /* line 144, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar.is-visible {
+            opacity: 0.7;
+            left: 0px; }
+          /* line 153, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar #avatarOverlay, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar #avatarOverlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 1;
+            width: 60px;
+            height: 60px;
+            background: rgba(0, 0, 0, 0.38);
+            border-radius: 100%;
+            transform: scale(0);
+            transition: all 0.5s;
+            opacity: 0;
+            pointer-events: none;
+            display: flex;
+            align-items: center;
+            justify-content: center; }
+          /* line 182, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar.is-visible #avatarOverlay, #Account section #AccountLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOverlay, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar.is-visible #avatarOverlay, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOverlay {
+            transform: scale(1.01);
+            opacity: 1;
+            pointer-events: auto; }
+      /* line 191, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      #Account section #AccountLogged#AccountLogged .content #ChangeAvatar #buttonUploadAvatar, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar #buttonUploadAvatar {
+        width: 0;
+        width: 0;
+        padding: 2em;
+        transition: all 0.4s;
+        transform-origin: top;
+        transform: scale(0);
+        opacity: 0; }
+        /* line 199, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #AccountLogged#AccountLogged .content #ChangeAvatar #buttonUploadAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar #buttonUploadAvatar.is-visible {
+          transform: scale(1);
+          opacity: 1; }
+        /* line 203, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        #Account section #AccountLogged#AccountLogged .content #ChangeAvatar #buttonUploadAvatar *, #Account section #AccountNotLogged#AccountLogged .content #ChangeAvatar #buttonUploadAvatar * {
+          font-size: 10px !important; }
+    /* line 217, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #Login, #Account section #LoginGoogle, #Account section #LoginFacebook, #Account section #ForgotPassword, #Account section #Logout {
       margin-bottom: 10px; }
+
+/* line 227, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+.dialogAvatar img, .dialogAvatar .avatar, .dialogAvatar .avatarDefault {
+  width: 60px;
+  height: 60px;
+  max-width: 60px;
+  max-height: 60px;
+  min-width: 60px;
+  min-height: 60px;
+  border-radius: 100%; }
+
+/* line 237, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+.dialogAvatar .currentAvatarInModal {
+  position: relative; }
+  /* line 239, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  .dialogAvatar .currentAvatarInModal .avatar {
+    opacity: 1 !important; }
+    /* line 241, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    .dialogAvatar .currentAvatarInModal .avatar.is-visible {
+      opacity: 0.3 !important; }
+  /* line 246, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  .dialogAvatar .currentAvatarInModal .avatarPreview {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scale(1) translate3d(0, 0, 0);
+    opacity: 0;
+    transition: all 0.3s;
+    pointer-events: none; }
+    /* line 256, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    .dialogAvatar .currentAvatarInModal .avatarPreview.is-visible {
+      transform: scale(1.2) translate3d(44px, 0, 0);
+      opacity: 1;
+      pointer-events: auto; }
 
 /*# sourceMappingURL=Account.css.map */
