--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -60,7 +60,6 @@
 
 #Account{
   margin-top: 1em;
-  
   section{
     display:   flex;
     margin:    2em auto;
@@ -83,35 +82,44 @@
       &#AccountLogged{
         .content{
 
-        div.flex{
-          margin-bottom: 20px;
+          div.flex{
+            margin-bottom: 20px;
 
-          p{
-            &:firs-of-type{
-              margin-top: 10px;
+            p{
+              &:firs-of-type{
+                margin-top: 10px;
+              }
+              &#textUsername{
+                font-size: 22px;
+                color: $color_tertiary;
+              }
+              &#textEmail{
+                font-size: 12px;
+                color: $color_text_secondary; 
+                width: 10em;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+              }
+              &#textEmailStatut{
+                font-size: 10px;
+                color: $color_text_disabled;
+              }
             }
-            &#textUsername{
-              font-size: 22px;
-              color: $color_tertiary;
-            }
-            &#textEmail{
-              font-size: 12px;
-              color: $color_text_secondary; 
-              width: 10em;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-            }
-            &#textEmailStatut{
-              font-size: 10px;
-              color: $color_text_disabled;
-            }
+
           }
+
+          #VerifyEmail, #ChangePassword, #Logout{
+              margin-top: 10px;
+          }
+          #VerifyEmail{}
+          #ChangePassword{}
+          #Logout{}
 
           #ChangeAvatar{
             margin-right: 1em;
 
-            .currentAvatar, .avatarPreview{
+            .currentAvatar{
               transition: all 0.5s;
               display: inline-block;
 
@@ -142,55 +150,48 @@
                 .avatarDefault{
                 }
 
-                #avatarOptions{
+                #avatarOverlay{
                   position: absolute;
+                  //top:      0;
+                  //left:     3.8em;
+
                   top:      0;
-                  left:     3.8em;
+                  left:     0;
+                  opacity:  1;
+
+                  width:    60px;
+                  height:   60px;
+                  background: rgba(0, 0, 0, 0.38);
+                  border-radius: 100%;
+
+
                   transform: scale(0);
 
                   transition: all 0.5s;
                   opacity:    0;
                   pointer-events: none;
 
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
 
-                  #uploadButton{
-
-                  }
-                  #deleteButton{
-
-                  }
 
                 }
-                &:hover {
-                  width:6.25em;
-                  #avatarOptions{
-                    transform: scale(0.8);
+                &.is-visible, &:hover {
+                  //width:6.25em;
+                  #avatarOverlay{
+                    transform: scale(1.01);
                     opacity: 1;
                     pointer-events: auto;
                   }
                 }
               }
-
-              &.avatarPreview{
-                position: absolute;
-                //left:     28px;
-                left:44px;
-                transform:  scale(1) translate3d(0, 0, 0);
-                opacity:    0;
-                pointer-events: none;
-
-                &.is-visible{
-                  transform:  scale(1.2) translate3d(-20px, 15px, 0);
-                  opacity:    1;
-                  pointer-events: auto;
-                }
-
-              }
-
             }
+
             #buttonUploadAvatar{
-              width: 0em; // trick
-              height: 0em;
+              width: 0;
+              width: 0;
+              padding: 2em;
               transition: all 0.4s;
               transform-origin: top;
               transform:  scale(0);
@@ -198,21 +199,14 @@
               &.is-visible{
                 transform:  scale(1);
                 opacity:    1;
-                height:     4em;
               }
               *{ font-size: 10px !important; }
             }
+
           }
+      
 
-        }
-
-        #VerifyEmail, #ChangePassword, #Logout{
-            margin-top: 10px;
-        }
-        #VerifyEmail{}
-        #ChangePassword{}
-        #Logout{}
-
+          
         }
       }
       
@@ -226,8 +220,46 @@
     #DeleteAccount{}
  
   }  
-  
 }
 
+.dialogAvatar{
 
+  img, .avatar, .avatarDefault{
+    width:      60px;
+    height:     60px;
+    max-width:  60px;
+    max-height: 60px;
+    min-width:  60px;
+    min-height: 60px;
+    border-radius: 100%;
+  }
 
+  .currentAvatarInModal{
+    position: relative;
+    .avatar{
+      opacity:    1 !important;
+      &.is-visible{
+        opacity: 0.3 !important;
+      }
+    }
+
+    .avatarPreview{
+      position: absolute;
+      //left:     28px;
+      top:  0;
+      left: 0;
+      transform:  scale(1) translate3d(0, 0, 0);
+      opacity:    0;
+      transition: all 0.3s;
+      pointer-events: none;
+
+      &.is-visible{
+        transform:  scale(1.2) translate3d(44px, 0, 0);
+        opacity:    1;
+        pointer-events: auto;
+      }
+
+    }
+
+  }
+}
