--- a/client/scss/Pages.scss
+++ b/client/scss/Pages.scss
@@ -75,37 +75,18 @@ html body #App-wrapper .App .app-main .app-content .Page{
     header{
       background: $color_secondary;
       padding: 2em 1em 0.3em 2em;
-      
-      
       #PleaseLogin{
         margin-bottom: -1.5em;
       }
     }
-    section{
-      padding: 2em 2em;
-    }
-    h2{
-      color: $color_text_secondary;
-      //margin-bottom: 0.5em;
-    }
-
-    input{
-      color: $color_text_secondary;
-      font-size: 16px !important;
-    }
-
-    p{
-      //color: $color_primary;
-    }
-    .task-new, .task-list{
-      margin: 0em auto 2em auto;
-    }
-
+    
     .task-new{
       width: 100%;
-      
+      margin-bottom: 1em;
+
       form {
         width: 100%;
+        display: flex;
 
         button.add{
           width:       3em;
@@ -121,161 +102,180 @@ html body #App-wrapper .App .app-main .app-content .Page{
       }
     }
 
-    .task-list{
-      margin-top: 1em;
-      h2{}
-      label{
-        display: block;
+    section{
+      padding: 2em 2em;
+    
+      h2{
+        color: $color_text_secondary;
       }
-      .hide-completed {
-        input{
-          margin-right: 0.5em;
+
+      label{}
+
+
+      .task-list{
+        margin: 1em auto 2em auto;
+        h2{}
+        label{
+          display: block;
         }
-      }
-
-      .task-ul {
-        padding: 0;
-        //background: white;
-
-        .task-li{
-          position:     relative;
-          list-style:   none;
-          padding:      1.25em 1em;
-          color:        $color_primary;
-          overflow:     hidden;
-          
-          background: $color_secondary;
-          margin-top: 1em;
-          
-          box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-          transition: all 0.25s ease;
-
-          &:hover {
-            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-            .overlay{
-              transform:translateY(0);
-            }
+        .hide-completed {
+          input{
+            color: $color_text_secondary;
+            font-size: 16px !important;
+            margin-right: 0.5em;
           }
-  
-          
-          span{
-            width: 100%;
-          }
-          
-          .lineText{
-            .text {
-              display:  block;
-              width:    100%;
-              margin-left: 0.6em;
-              cursor:   pointer;
-              .username{
-                width:      5em;
-                min-width:  100%;
-                margin-bottom: 0.3em;
-                color:    $color_text_white_primary;
+        }
+
+        .task-ul {
+          padding: 0;
+          //background: white;
+
+          .task-li{
+            position:     relative;
+            list-style:   none;
+            color:        $color_primary;
+            overflow:     hidden;
+
+            background: $color_secondary;
+            margin-top: 1em;
+
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            transition: all 0.25s ease;
+
+            &:hover {
+              box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+              .overlay{
+                transform:translateY(0);
               }
-              .message{
+            }
+
+
+            span{
+              width: 100%;
+            }
+
+            .lineText, .lineControls{
+              padding:    1.25em 1em;
+            }
+            
+            .lineText{
+              .text {
+                display:  block;
+                width:    100%;
+                margin-left: 0.6em;
+                cursor:   pointer;
+                .username{
+                  width:      5em;
+                  min-width:  100%;
+                  margin-bottom: 0.3em;
+                  color:    $color_text_white_primary;
+                }
+                .message{
+                  color: $color_text_white_secondary;
+                }
+              }
+            }
+            
+            hr{
+              background: $color_text_secondary !important;
+            }
+
+            .lineControls{
+              display:      block;
+              width:        100%;
+              align-items:  center;
+              text-align:   right;
+              button.toggle-private{
+                padding:      0.2em 0;
+                min-width:    5em;
+                cursor:       pointer;
+                transition:   all 0.25s;
+                color:        $color_text_white_secondary;
+                background:   none;
+              }
+
+              // Delete cross
+              .delete {
+                margin-right: 0em;
+                margin-left:  0em;
+                min-width:    2em;
+                font-size:    1em;
+                font-weight:  bold;
+                color:        $color_text_white_secondary;
+                background:   none;
+              }
+
+              // Toggle
+              input{
+                //padding: 20px;
+                //height: 1em;
+                //margin-bottom: 0em;
+                //min-width: 2em;
                 color: $color_text_white_secondary;
               }
             }
-          }
-          
-          .lineControls{
-            margin-top:     2em;
-            text-align:     right;
-            width:    100%;
-            display:  block;
-            align-items: center;
-            // Button public/private
-            button.toggle-private{
-              padding:      0.2em 0;
-              min-width:    5em;
-              cursor:       pointer;
-              transition:   all 0.25s;
-              color:        $color_tertiary;
+
+
+            &.task-checked, &.task-private{
+              //background: $color_blue_medium_transparent;
+              transition: all 0.25s;
             }
 
-            // Delete cross
-            .delete {
-              margin-right: 0em;
-              margin-left:  0em;
-              min-width:    2em;
-              font-size:    1em;
-              font-weight:  bold;
-              color:        $color_tertiary;
-            }
-
-            // Toggle
-            input{
-              //padding: 20px;
-              //height: 1em;
-              //margin-bottom: 0em;
-              //min-width: 2em;
-              background: grey;
-            }
-          }
-
-
-          &.task-checked, &.task-private{
-            color:      $color_primary;
-            //background: $color_blue_medium_transparent;
-            transition: all 0.25s;
-          }
-
-          &.task-checked{
-            color: $color_text_disabled;
-            .text .message{
-              text-decoration: line-through; 
-            }
-          }
-
-          &.task-private{
-            button.toggle-private{
-              color: $color_tertiary;
-            }
-          }
-
-
-          .edit-task{
-            width: 100%;
-            padding: 0em 0.5em 0 1em;
-            margin-top: -0.85em;
-            input{
-              width:        100%;
-              margin-top:   0em;
-              margin-bottom: 0em;
-              padding:      2em 0.5em;
-              font-size:    1.1em !important;
-              color:        $color_text_white_primary;
-            }
-            button{
-              ////background:   $color_tertiary;
-              //color:        $color_secondary;
-              padding:      0.3em 0.6em;
-              margin-right: 0.3em;
-              margin-top:   0.5em;
-              color: $color_text_white_secondary;
-              &[type="submit"]{
-             // background:   $color_active;
-             // color:        $color_tertiary;
+            &.task-checked{
+              color: $color_text_disabled;
+              .text .message{
+                text-decoration: line-through; 
               }
             }
+
+            &.task-private{
+              button.toggle-private{
+                color: $color_tertiary;
+              }
+            }
+
+
+            .edit-task{
+              width: 100%;
+              padding: 0em 0.5em 0 1em;
+              margin-top: -0.85em;
+              input{
+                width:        100%;
+                margin-top:   0em;
+                margin-bottom: 0em;
+                padding:      2em 0.5em;
+                font-size:    1.1em !important;
+                color:        $color_text_white_primary;
+              }
+              button{
+                ////background:   $color_tertiary;
+                //color:        $color_secondary;
+                padding:      0.3em 0.6em;
+                margin-right: 0.3em;
+                margin-top:   0.5em;
+                color: $color_text_white_secondary;
+                &[type="submit"]{
+               // background:   $color_active;
+               // color:        $color_tertiary;
+                }
+              }
+            }
+
           }
 
         }
-
       }
-    }
 
-    .task-new form{
-      display:        -webkit-flex;
-      display:        -moz-flex;
-      display:        -ms-flex;
-      display:        flex;
-      align-items:    center;
-    }
+      .task-new form{
+        display:        -webkit-flex;
+        display:        -moz-flex;
+        display:        -ms-flex;
+        display:        flex;
+        align-items:    center;
+      }
 
-    
+
+    }
     
     
   }
