--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -96,7 +96,7 @@
               &#textEmail{
                 font-size: 12px;
                 color: $color_text_secondary; 
-                width: 10em;
+                width: 100%;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
